# corporate_portal

./: db.sqlite3  pyproject.toml
corporate_portal/: asgi.py  wsgi.py
server/: urls.py
server/settings/: settings.py
